--- a/src/shared/views/components/genericCardSkeleton.component.templ
+++ b/src/shared/views/components/genericCardSkeleton.component.templ
@@ -7,7 +7,7 @@ templ GenericCardSkeleton(id string) {
         >
         
         <div slot="image">
-            <sl-skeleton class="w-32 h-32" style="--border-radius: 0;"></sl-skeleton>
+            <sl-skeleton class="w-32 h-32" style="--border-radius: 0;" effect="pulse"></sl-skeleton>
         </div>
 
         <div class="w-56 sm:w-60 h-32 md:w-64 flex-initial mx-2">
